# tuyabeornottuyabe

./: README.md  posture_calibration.c  posture_calibration.h  server.py
posture/: readme.md
posture/ml/: config.py  data_collector.py  dataset.py  inference.py  inference_robust.py  model.py  pendantMQTTreader.py  pendant_inference.py  prepare_dataset.py  readme.md  requirements.txt  train.py  train_hybrid.py  train_robust.py
posture/ui/: CMakeLists.txt  README.md  README_zh.md  app_default.config  readme.md
